Initial commit - Social Media REST API
- Spring Boot 3.4.3 + Java 21 + MySQL
- User registration and login with BCrypt password hashing
- Spring Security configuration
- Post, Comment, Like, Follow, Message CRUD operations
- DTOs for clean API responses (PostResponseDTO, UserDTO, MessageDTO, UserResponseDTO, LoginResponseDTO)
- GlobalExceptionHandler with proper HTTP status codes
- ApiResponse wrapper for consistent API responses
- ResponseStatusException for 404, 400, 401 error handling
- SQL scripts for database setup and sample data
- 27 users, 80 posts, 88 comments, 349 likes, 91 follows, 30 messages